--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 08:05:02 2018</p>
+         Last Run: Thu Nov  1 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -49,8 +49,8 @@
                         <td>67</td>
                         <td>1</td>
                         <td>8</td>
-                        <td>SW</td>
-                        <td>48</td>
+                        <td>SSW</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
@@ -60,9 +60,9 @@
                         <td>4</td>
                         <td>56</td>
                         <td>1</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>SSW</td>
-                        <td>49</td>
+                        <td>51</td>
                      </tr>
                   </tbody>
                </table>
@@ -183,8 +183,8 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "46",
-                 "48",
-                 "49"
+                 "50",
+                 "51"
                ]
              }
            ]
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 08:05:02 2018</p>
+         Last Run: Thu Nov  1 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -248,31 +248,31 @@
                         <td>Chance of Rain</td>
                         <td>7</td>
                         <td>5</td>
-                        <td>44</td>
+                        <td>46</td>
                         <td>59</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>88</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>46</td>
+                        <td>49</td>
                         <td>58</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>91</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>50</td>
+                        <td>54</td>
                         <td>55</td>
                         <td>0</td>
                         <td>10</td>
@@ -375,9 +375,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "44",
                  "46",
-                 "50"
+                 "49",
+                 "54"
                ]
              },
              {
@@ -397,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "91",
+                 "87",
+                 "90",
                  "91"
                ]
              }
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 08:05:02 2018</p>
+         Last Run: Thu Nov  1 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,11 +463,11 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-3</td>
-                        <td>37</td>
+                        <td>36</td>
                         <td>78</td>
                         <td>0</td>
                         <td>5</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>84</td>
                      </tr>
                      <tr>
@@ -487,8 +487,8 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>36</td>
-                        <td>81</td>
+                        <td>35</td>
+                        <td>80</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNW</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "37",
                  "36",
-                 "36"
+                 "36",
+                 "35"
                ]
              },
              {
@@ -603,7 +603,7 @@
                "data":[
                  "78",
                  "78",
-                 "81"
+                 "80"
                ]
              },
              {
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 08:05:02 2018</p>
+         Last Run: Thu Nov  1 09:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,14 +676,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-9</td>
+                        <td>-5</td>
+                        <td>-8</td>
                         <td>5</td>
                         <td>72</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>53</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,23 +691,23 @@
                         <td>-6</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
-                        <td>62</td>
+                        <td>61</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Mostly Cloudy</td>
                         <td>-7</td>
                         <td>-10</td>
-                        <td>11</td>
-                        <td>77</td>
+                        <td>12</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ESE</td>
-                        <td>67</td>
+                        <td>66</td>
                      </tr>
                   </tbody>
                </table>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
+                 "-8",
                  "-9",
                  "-10"
                ]
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-6",
+                 "-5",
                  "-6",
                  "-7"
                ]
@@ -807,7 +807,7 @@
                "data":[
                  "5",
                  "5",
-                 "11"
+                 "12"
                ]
              },
              {
@@ -817,8 +817,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "72",
-                 "74",
-                 "77"
+                 "73",
+                 "76"
                ]
              },
              {
@@ -827,9 +827,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
-                 "62",
-                 "67"
+                 "52",
+                 "61",
+                 "66"
                ]
              }
            ]
