--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 10:05:02 2018</p>
+         Last Run: Thu Nov  1 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Blizzard SC 03 - Foothills Telus Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Nov 03, 2018 - 10:40AM til 11:40AM</H4>
                <table class="table table-striped">
@@ -224,7 +224,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 10:05:02 2018</p>
+         Last Run: Thu Nov  1 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Nov 04, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -246,38 +246,38 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>7</td>
-                        <td>5</td>
+                        <td>8</td>
+                        <td>6</td>
                         <td>46</td>
                         <td>55</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>88</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
                         <td>Chance of Rain</td>
                         <td>8</td>
                         <td>6</td>
-                        <td>51</td>
+                        <td>49</td>
                         <td>54</td>
                         <td>1</td>
                         <td>11</td>
                         <td>WNW</td>
-                        <td>91</td>
+                        <td>90</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>9</td>
-                        <td>9</td>
-                        <td>54</td>
-                        <td>51</td>
+                        <td>8</td>
+                        <td>6</td>
+                        <td>53</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>92</td>
+                        <td>91</td>
                      </tr>
                   </tbody>
                </table>
@@ -304,9 +304,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "5",
                  "6",
-                 "9"
+                 "6",
+                 "6"
                ]
              },
              {
@@ -316,9 +316,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "7",
                  "8",
-                 "9"
+                 "8",
+                 "8"
                ]
              }
            ]
@@ -376,8 +376,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "46",
-                 "51",
-                 "54"
+                 "49",
+                 "53"
                ]
              },
              {
@@ -388,7 +388,7 @@
                "data":[
                  "55",
                  "54",
-                 "51"
+                 "52"
                ]
              },
              {
@@ -397,9 +397,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "88",
-                 "91",
-                 "92"
+                 "87",
+                 "90",
+                 "91"
                ]
              }
            ]
@@ -439,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 10:05:02 2018</p>
+         Last Run: Thu Nov  1 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Nov 06, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -463,11 +463,11 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-3</td>
-                        <td>36</td>
-                        <td>78</td>
+                        <td>37</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>5</td>
-                        <td>NW</td>
+                        <td>NNW</td>
                         <td>84</td>
                      </tr>
                      <tr>
@@ -476,7 +476,7 @@
                         <td>-3</td>
                         <td>-6</td>
                         <td>36</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>6</td>
                         <td>NNW</td>
@@ -487,7 +487,7 @@
                         <td>Snow Showers</td>
                         <td>-3</td>
                         <td>-6</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>80</td>
                         <td>0</td>
                         <td>6</td>
@@ -590,9 +590,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
+                 "37",
                  "36",
-                 "36",
-                 "36"
+                 "35"
                ]
              },
              {
@@ -601,8 +601,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "78",
-                 "78",
+                 "77",
+                 "77",
                  "80"
                ]
              },
@@ -654,7 +654,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Thu Nov  1 10:05:02 2018</p>
+         Last Run: Thu Nov  1 11:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 07, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -676,14 +676,14 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>-6</td>
-                        <td>-9</td>
+                        <td>-5</td>
+                        <td>-8</td>
                         <td>5</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>ESE</td>
-                        <td>53</td>
+                        <td>E</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -691,7 +691,7 @@
                         <td>-6</td>
                         <td>-9</td>
                         <td>5</td>
-                        <td>74</td>
+                        <td>73</td>
                         <td>0</td>
                         <td>6</td>
                         <td>E</td>
@@ -703,7 +703,7 @@
                         <td>-7</td>
                         <td>-10</td>
                         <td>12</td>
-                        <td>77</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>6</td>
                         <td>ESE</td>
@@ -734,7 +734,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-9",
+                 "-8",
                  "-9",
                  "-10"
                ]
@@ -746,7 +746,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-6",
+                 "-5",
                  "-6",
                  "-7"
                ]
@@ -816,9 +816,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "72",
                  "73",
-                 "74",
-                 "77"
+                 "76"
                ]
              },
              {
@@ -827,7 +827,7 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "53",
+                 "52",
                  "61",
                  "66"
                ]
